# Homeless

./: .gitignore  CMakeLists.txt  Homeless.cpp  LICENSE  README.md
Components/: Entity.cpp  Entity.hpp  NPC.cpp  NPC.hpp  Player.hpp
ECS/: Entity.hpp
Engine/: Attack.cpp  Attack.hpp  Generate.cpp  Generate.hpp  Movement.cpp  Movement.hpp  Position.cpp  Position.hpp
Engine/Actions/Generation/: Generate.cpp  Generate.hpp  NPCGenerator.cpp  NPCGenerator.hpp  PlayerGenerator.cpp  PlayerGenerator.hpp
Engine/Audio/: Audio.cpp  Audio.hpp  Music.cpp  Music.hpp  MusicFade.cpp  MusicFade.hpp  PlayBox.cpp  PlayBox.hpp  SFX.cpp  SFX.hpp  SFXManager.cpp  SFXManager.hpp  VolumeManager.cpp  VolumeManager.hpp
Engine/Audio/Manager/: SFXManager.cpp  SFXManager.hpp  VolumeManager.cpp  VolumeManager.hpp
Engine/Audio/Metadata/: MetadataReader.cpp  MetadataReader.hpp
Engine/Audio/Plug/: MusicFade.cpp  MusicFade.hpp
Engine/Components/Entities/: Entity.hpp  NPC.cpp  NPC.hpp  Player.cpp  Player.hpp
Engine/Config/Audios/: SFX.hpp
Engine/Config/Entities/: NPC.hpp
Engine/Config/Events/: MoveEvent.hpp
Engine/Config/Movement/: MoveEvent.hpp
Engine/Config/Utilities/: Transer.hpp
Engine/Entities/: Entity.cpp  Entity.hpp  NPC.hpp  Player.hpp
Engine/Entity/: Entity.cpp  Entity.hpp
Engine/FileSystem/: Encoder.cpp  Encoder.hpp
Engine/FileSystem/Encoder/: Encoder.cpp  Encoder.hpp
Engine/FileSystem/Packager/: Package.hpp  Unpackage.hpp
Engine/Log/: LogSystem.cpp  LogSystem.hpp
Engine/Lua/LuaBinding/: LuaEntity.cpp  LuaMusic.cpp  LuaSFX.cpp
Engine/Media/: Music.cpp  Music.hpp  SFX.cpp  SFX.hpp  Video.cpp  Video.hpp
Engine/Media/Manager/: SFXManager.cpp  VolumeManager.cpp
Engine/Media/Metadata/: MetadataReader.cpp  MetadataReader.hpp
Engine/Media/Plug/: MusicFade.cpp  MusicFade.hpp
Engine/Physics/Edge/: EdgeDetect.hpp
Engine/Script/: LoadMusic.lua  LoadSFX.lua
Engine/Tools/Packager/: Package_main.cpp  Packager.cpp  Packager.hpp  Unpackager.cpp  Unpackager.hpp
Engine/UI/Components/Text/: ClickableText.cpp  ClickableText.hpp
Engine/UI/Layout/: Centre.cpp  Centre.hpp  Left.cpp  Left.hpp  Right.cpp  Right.hpp
Engine/Utilities/Packager/: Package.cpp  Package.hpp  Unpackage.cpp  Unpackage.hpp
Engine/Window/: Manager.cpp  Manager.hpp
Engine/Windows/: Manager.hpp  RenderWindow.hpp  Screen.cpp  Screen.hpp  ScreenManager.cpp  ScreenManager.hpp  Windows.cpp  Windows.hpp
Engine/Windows/Manager/: ScreenManager.cpp  ScreenManager.hpp
Game/Config/Audios/: Music.hpp  SFX.hpp
Game/Config/Entities/: NPC.hpp  Player.hpp
Game/Config/Utilities/: Transer.hpp
Game/Config/Windows/: Windows.hpp
Game/Entities/NPC/: DeadBody.cpp  DeadBody.hpp
Game/Script/Lua/: LoadMusic.lua
Game/Script/Lua/Audio/: LoadMusic.lua  LoadSFX.lua
Game/Script/Native/: LoadMusic.cpp  LoadMusic.hpp
Game/Script/Native/Audio/: AudioLoader.cpp  AudioLoader.hpp  Music.cpp  SFX.cpp
Game/Stage/: Debugger.hpp  HUD.cpp  HUD.hpp  MainWindow.hpp  Setting.cpp  Setting.hpp  StartScreen.cpp  StartScreen.hpp
Log/: LogSystem.cpp  LogSystem.hpp
Stage/: MainWindow.hpp
Type/: Type.hpp
Window/: MainWindow.cpp  MainWindow.hpp
